# wellbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  config.yaml  docker-compose.yml  main.py  pyproject.toml  rxconfig.py
config/: agents.yaml  ai_services.yaml  greetings.yaml  knowBase.yaml  models.yaml  notice.md  prompts.yaml
config/prompts/: accuracy.md  balanced.md  casual.md  default.md  formal.md  general.md  none.md  structured.md  구조적.md  균형적.md  미적용.md  일반.md  정확성.md
docs/: database-architecture.md  database_schema.xlsx  database_schema_f.xlsx  db-erd.xlsx  ddl.sql  e.txt  nginx-reflex.conf
docs/PRD/: file-attachment.md
docs/kb-merge/: plan.md
docs/kb-migration/: plan.md
docs/kb-pdf-page-markers/: plan.md
docs/kb-review/: code-review.md
docs/kb-upload-bug-audit/: report.md  task.md
docs/refactor-structure/: plan.md  style-guide.md
docs/report-maker/: report_macker.csv
scripts/: cleanup_personal_kb.py  migrate_report_maker_agnt_id.py  reset_report_maker.py  seed.py  shared_kb_manager.py  transform_lambda.py  verify_attachment_index.py
scripts/migration/: alembic.ini  env.py
tests/chat/: test_message_seed.py
tests/report_maker/: test_parsing.py  test_security.py  test_slides.py  test_style_single_editor.py  test_token_usage.py
wellbot/: app.py  constants.py  env.py  log_context.py  log_timing.py  logging_config.py  models.py  paths.py  styles.py  wellbot.py
wellbot/api/: __init__.py  app.py  client_log.py  download.py  kb_download.py  kb_upload.py  report_checker_api.py  report_maker_api.py  upload.py
wellbot/components/: base_input_bar.py  chat_area.py  icons.py  layout.py  search_modal.py  sidebar.py
wellbot/config/: loader.py  settings.py
wellbot/logger/: __init__.py  config.py  context.py  timing.py
wellbot/models/: __init__.py  agent.py  agent_memory.py  attachment.py  auth_token.py  base.py  (+5 more)
(+164 files in other folders)
