[project]
name = "wellbot"
version = "0.2.0"
description = "A Modular chatbot system built on AWS Bedrock, evolving from simple chat to RAG and agent capabilities with Reflex."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "reflex>=0.8.28",
    "bcrypt>=4.2.0",
    "PyJWT>=2.9.0",
    "pymysql>=1.1.0",
    "python-dotenv>=1.0.0",
]
