[project]
name = "wellbot"
version = "0.2.0"
description = "A Modular chatbot system built on AWS Bedrock, evolving from simple chat to RAG and agent capabilities with Reflex."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "reflex>=0.8.28",
    "bcrypt>=4.2.0",
    "boto3>=1.35.0",
    "PyJWT>=2.9.0",
    "pymysql>=1.1.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[tool.uv]
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
]
