[project]
name = "wellbot"
version = "0.2.0"
description = "A Modular chatbot system built on AWS Bedrock, evolving from simple chat to RAG and agent capabilities with Reflex."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "reflex>=0.8.28",
    "bcrypt>=4.2.0",
    "boto3>=1.35.0",
    "PyJWT>=2.9.0",
    "pymysql>=1.1.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "cryptography>=46.0.7",
    # 파일 파싱
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "python-pptx>=1.0.0",
    "pypdf>=4.0.0",
    # 벡터 검색
    "faiss-cpu>=1.8.0",
    "numpy>=1.26.0",
    # HTTP (Upstage API 호출)
    "httpx>=0.27.0",
    # API (Reflex api_transformer 에 마운트)
    "fastapi>=0.115.0",
    "python-multipart>=0.0.9",
]

[tool.uv]
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
]
